--- a/catalog.html
+++ b/catalog.html
@@ -17,13 +17,13 @@
         <nav class="navigation">
           <ul>
             <li>
-              <a href="#">СТУДИЯ</a>
+              <a href="index.html">СТУДИЯ</a>
             </li>
             <li>
               <a href="#">КЛИЕНТЫ</a>
             </li>
-            <li>
-              <a href="#" class="active">МАГАЗИН</a>
+            <li class="active">
+              <a href="#">МАГАЗИН</a>
             </li>
             <li>
               <a href="#">КОНТАКТЫ</a>
