--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <nav class="navigation">
           <ul>
-            <li>
+            <li class="active">
               <a href="#">СТУДИЯ</a>
             </li>
             <li>
