--- a/catalog.html
+++ b/catalog.html
@@ -8,9 +8,9 @@
     <link href="css/normalize.css" rel="stylesheet">
   </head>
   <body>
-    <header class="header clearfix">
+    <header class="header">
       <div class="container">
-
+        <div class="header-wrap clearfix ">
         <div class="logo">
           <img src="img/nerds-logo.png" width="165" height="75" alt="NERDS">
         </div>
@@ -33,6 +33,7 @@
         <div class="bin">
           <a href="#" class="buyed-items"> Корзина</a>
         </div>
+      </div>
         <h1> Магазин готовых шаблонов </h1>
       </div>
     </header>
@@ -76,9 +77,9 @@
 
           <a href="#" class="sort-active"> ПО ЦЕНЕ </a>
           <a href="#"> ПО ТИПУ </a>
-          <a href="#"> ПО НАЗВАНИЮ </a>
+          <a href="#"> ПО НАЗВАНИЮ</a>
 
-          <span class="triangle"> down </span>
+          <span class="triangle"> do </span>
           <span class="triangle"> up </span>
 
 
@@ -126,9 +127,10 @@
           </ul>
         </div>
 
-     </div>
+
      <div class="map">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d107279.61274205093!2d32.51758813605257!3d46.649656689318554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c41ab0ce9e92c3%3A0xd7f81f4dc6fedab0!2z0J7Qv9GC0LjQvNCw!5e0!3m2!1sru!2sua!4v1520802937371" width="1300" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
     </div>
    </div>
 
