--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
     <link href="css/normalize.css" rel="stylesheet">
   </head>
   <body>
-    <header class="header">
-      <div class="container">
+    <header class="header ">
+      <div class="container ">
+        <div class="header-wrap clearfix ">
         <div class="logo">
           <img src="img/nerds-logo.png" width="165" height="75" alt="NERDS-LOGO">
         </div>
-        <div class="bin">
-          <a href="#" class="buyed-items"> Корзина</a>
-        </div>
-        <nav class="navigation">
+          <nav class="navigation">
           <ul>
             <li class="active">
               <a href="#">СТУДИЯ</a>
@@ -32,19 +30,26 @@
             </li>
           </ul>
         </nav>
+        <div class="bin">
+          <a href="#" class="buyed-items"> Корзина</a>
+        </div>
+        </div>
 
+        <div class="header-bottom clearfix">
 
         <div class="about-us">
-          <span class="benefits"> Долго, дорого, скурпулезно </span>
+          <span class="benefits"> Долго, дорого, скрупулезно </span>
           <p> Математически выверенный дизайн для вашего мобильного приложения </p>
           <a href="#" class="button"> УЗНАТЬ БОЛЬШЕ </a>
         </div>
         <div class="main-logo">
           <img src="img/head-img.png" width="710" height="420" alt="Mobiles">
         </div>
+        </div>
+        </div>
+  </header>
 
-      </div>
-    </header>
+
 
     <div class="main">
       <div class="container">
@@ -68,8 +73,8 @@
             <a href="#" class="button yellow">Заказать</a>
           </div>
         </div>
-        <hr>
-        <div class="clearfix">
+
+      <div class="clearfix">
         <div class="info ">
           <span class="info-title"> Мы- маленькая, но гордая студия из Краснодара </span>
           <p> Исповедуем принципы минимализма и чистоты. Ставим математичский расчет выше креатива. Работаем как роботы.</p>
