--- a/catalog.html
+++ b/catalog.html
@@ -91,7 +91,7 @@
           <div class="web-sites selected">
             <a href=""><img src="img/img-sedona.jpg" width="360" height="345" alt="#"></a>
             <p class="web-site-name"> SEDONA</p>
-            <span class="description"> Сайт для туристов </span>
+            <span class="description-sedona"> Сайт для туристов </span>
             <a href="#" class="buy">990 руб.</a>
           </div>
           <div class="web-sites">
