--- a/catalog.html
+++ b/catalog.html
@@ -89,10 +89,12 @@
 
         <div class="examples ">
           <div class="web-sites selected">
-            <a href=""><img src="img/img-sedona.jpg" width="360" height="345" alt="#"></a>
-            <p class="web-site-name"> SEDONA</p>
-            <span class="description-sedona"> Сайт для туристов </span>
-            <a href="#" class="buy">990 руб.</a>
+            <a href=""><img src="img/img-sedona.jpg" width="360" height="575" alt="#"></a>
+            <div class="layer">
+              <p class="web-site-name"> SEDONA</p>
+              <span class="description-sedona"> Сайт для туристов </span>
+              <a href="#" class="buy">990 руб.</a>
+            </div>
           </div>
           <div class="web-sites">
             <a href="#"><img src="img/img-mishka.jpg" width="360" height="575" alt="#"></a>
