--- a/catalog.html
+++ b/catalog.html
@@ -34,7 +34,9 @@
           <a href="#" class="buyed-items"> Корзина</a>
         </div>
       </div>
-        <h1> Магазин готовых шаблонов </h1>
+        <div >
+            <h1 class="header-title"> Магазин готовых шаблонов </h1>
+        </div>
       </div>
     </header>
 
@@ -144,8 +146,8 @@
           <a href="#" class="social-btn insta"> INSTAGRAM </a>
         </div>
         <div class="footer-info">
-          <p><span> Давайте дружить, это выгодно!</span></p>
-          <p> Скидка 10% для друзей</p>
+          <p class="footer-info-title"> Давайте дружить, это выгодно!</p>
+          <p class="footer-info-description"> Скидка 10% для друзей</p>
         </div>
       </div>
     </footer>
