--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <div class="about-us">
           <span class="benefits"> Долго, дорого, скрупулезно </span>
-          <p> Математически выверенный дизайн для вашего мобильного приложения </p>
+          <p class="benefits-description"> Математически выверенный дизайн для вашего мобильного приложения </p>
           <a href="#" class="button"> УЗНАТЬ БОЛЬШЕ </a>
         </div>
         <div class="main-logo">
@@ -55,30 +55,37 @@
       <div class="container">
         <div class="services clearfix">
           <div class="services-main">
-            <img src="img/laptop.jpg" width="300" height="140" alt="WEB" >
-            <span class="service-name"> ВЕБ-САЙТЫ </span>
-            <p class="description"> Мир никогда не будет прежним как увидит сайт</p>
-            <a href="#" class="button">Заказать</a>
+              <div class="services-img">
+                  <img   src="img/laptop.jpg" width="300" height="140" alt="WEB" >
+              </div>
+              <span class="services-name"> ВЕБ-САЙТЫ </span>
+              <p class="service-description"> Мир никогда не будет прежним как увидит сайт</p>
+              <a href="#" class="button">Заказать</a>
           </div>
           <div class="services-main">
-            <img src="img/mobiles.jpg" width="300" height="140" alt="OS">
-            <span class="service-name"> ПРИЛОЖЕНИЯ </span>
-            <p class="description"> Покорите ТОП-10 приложений в APPSTORE для APPLE</p>
+            <div class="services-img">
+                <img  src="img/mobiles.jpg" width="300" height="140" alt="OS">
+            </div>
+            <span class="services-name"> ПРИЛОЖЕНИЯ </span>
+            <p class="service-description"> Покорите ТОП-10 приложений в APPSTORE для APPLE</p>
             <a href="#" class="button green">Заказать</a>
           </div>
           <div class="services-main">
-            <img src="img/presentation.jpg" width="300" height="140" alt="Present">
-            <span class="service-name"> ПРЕЗЕНТАЦИИ </span>
-            <p class="description"> Вы даже не подозреваете насколько вы изумительны</p>
+            <div class="services-img">
+                <img  src="img/presentation.jpg" width="300" height="140" alt="Present">
+            </div>
+            <span class="services-name"> ПРЕЗЕНТАЦИИ </span>
+            <p class="service-description"> Вы даже не подозреваете насколько вы изумительны</p>
             <a href="#" class="button yellow">Заказать</a>
           </div>
         </div>
 
-      <div class="clearfix">
+      <div class="main-bottom clearfix">
         <div class="info ">
           <span class="info-title"> Мы- маленькая, но гордая студия из Краснодара </span>
-          <p> Исповедуем принципы минимализма и чистоты. Ставим математичский расчет выше креатива. Работаем как роботы.</p>
-          <ul class="can-be-ordered"> <span> ВЫПОЛНЯЕМ ЗАКАЗ НА РАЗРАБОТКУ:</span>
+          <p class="info-description"> Исповедуем принципы минимализма и чистоты. Ставим математичский расчет выше креатива. Работаем как роботы.</p>
+          <span class="can-be-ordered-title"> ВЫПОЛНЯЕМ ЗАКАЗ НА РАЗРАБОТКУ:</span>
+          <ul class="can-be-ordered">
             <li> Веб-сайтов любой сложности </li>
             <li> Мобильных приложений для iOs </li>
             <li> Слайдшоу и видео презентаций </li>
@@ -88,7 +95,8 @@
           <div class="logo-2004">
           <img src="img/nerds-logo-color.jpg" width="360" height="180" alt="NERDS">
           </div>
-          <ul class="can-be-ordered how-we-work"> <span> КАК МЫ РАБОТАЕМ:</span>
+           <span class="can-be-ordered-title"> КАК МЫ РАБОТАЕМ:</span>
+          <ul class="can-be-ordered how-we-work">
             <li>С самоотдачей 146% </li>
             <li> В СРОКИ 100% </li>
             <li> Предоплата 50% </li>
@@ -115,8 +123,8 @@
           <a href="#" class="social-btn insta"> INSTAGRAM </a>
         </div>
         <div class="footer-info">
-          <p><span> Давайте дружить, это выгодно!</span></p>
-          <p> Скидка 10% для друзей</p>
+          <p class="footer-info-title"> Давайте дружить, это выгодно!</p>
+          <p class="footer-info-description"> Скидка 10% для друзей</p>
         </div>
       </div>
     </footer>
