--- a/catalog.html
+++ b/catalog.html
@@ -117,22 +117,42 @@
           <div class="web-sites selected">
             <a href="#" class="web-sites-img"><img src="img/img-mishka.jpg" width="360" height="575" alt="#"></a>
             <div class="layer">
-              <p class="web-site-name"> SEDONA</p>
+              <p class="web-site-name"> MISHKA</p>
               <span class="description-sedona"> Сайт для туристов </span>
-              <a href="#" class="buy">990 руб.</a>
+              <a href="#" class="buy">890 руб.</a>
             </div>
           </div>
-          <div class="web-sites ">
+          <div class="web-sites selected">
             <a href="" class="web-sites-img"><img src="img/img-pink.jpg" width="360" height="575" alt="#"></a>
+            <div class="layer">
+              <p class="web-site-name"> PINK</p>
+              <span class="description-sedona"> Сайт для туристов </span>
+              <a href="#" class="buy">999 руб.</a>
+            </div>
           </div>
-          <div class="web-sites">
+          <div class="web-sites selected">
             <a href="#" class="web-sites-img"><img src="img/img-kvast.jpg" width="360" height="575" alt="#"></a>
+            <div class="layer">
+              <p class="web-site-name"> KVAS</p>
+              <span class="description-sedona"> Сайт для туристов </span>
+              <a href="#" class="buy">1990 руб.</a>
+            </div>
           </div>
-          <div class="web-sites">
+          <div class="web-sites selected">
             <a href="#" class="web-sites-img"><img src="img/img-aplus.jpg" width="360" height="575" alt="#"></a>
+            <div class="layer">
+              <p class="web-site-name"> STUDY </p>
+              <span class="description-sedona"> Сайт для туристов </span>
+              <a href="#" class="buy">9290 руб.</a>
+            </div>
           </div>
-          <div class="web-sites">
+          <div class="web-sites selected">
             <a href="#" class="web-sites-img"><img src="img/img-barbershop.jpg" width="360" height="575" alt="#"></a>
+            <div class="layer">
+              <p class="web-site-name"> BARBERSHOP</p>
+              <span class="description-sedona"> Сайт для туристов </span>
+              <a href="#" class="buy">1990 руб.</a>
+            </div>
           </div>
         </div>
         <div class="pages">
