--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
     </div>
     </div>
 
+
+
+
     <footer>
       <div class="container clearfix">
         <div class="social">
@@ -128,5 +131,33 @@
         </div>
       </div>
     </footer>
+
+    <div class="popup-contact">
+      <div class="popup-contact-close"> ЗАКРЫТЬ</div>
+      <h2 class="popup-title"> Напишите нам </h2>
+      <form action="#" method="post" class="popup-form">
+        <div class="top clearfix">
+        <div class="left-column">
+          <label for="name"> Ваше имя </label><br>
+          <input type="text" class="enter-name" id="name" name="name" placeholder="Представьтесь, пожалуста" required>
+        </div>
+        <div class="right-column">
+          <label for="email"> Ваш e-mail </label><br>
+          <input type="text" class="enter-email" id="email" name="email" placeholder="Для отправки ответа" ><br>
+        </div>
+        </div>
+        <div class="bottom">
+          <label for="comment-field"> Текст письма </label> <br>
+          <textarea placeholder="В свободной форме" name="comment" id="comment-field"></textarea>
+        </div>
+        <input type="submit" value="ПОКАЗАТЬ">
+
+      </form>
+    </div>
+
+
+
+
+
   </body>
 </html>
