--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-  </head>
+    </head>
   <body>
     <header class="header ">
       <div class="container ">
@@ -26,7 +26,7 @@
               <a href="catalog.html">МАГАЗИН</a>
             </li>
             <li>
-              <a href="#">КОНТАКТЫ</a>
+              <a href="#" class="contact-us">СВЯЗАТЬСЯ С НАМИ</a>
             </li>
           </ul>
         </nav>
@@ -158,6 +158,6 @@
 
 
 
-
+    <script src="script/script.js"></script>
   </body>
 </html>
