--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
       <form action="#" method="post" class="popup-form">
         <div class="top clearfix">
         <div class="left-column">
-          <label for="name"> Ваше имя </label><br>
+          <label for="name"> Ваше имя </label>
           <input type="text" class="enter-name" id="name" name="name" placeholder="Представьтесь, пожалуста" required>
         </div>
         <div class="right-column">
-          <label for="email"> Ваш e-mail </label><br>
-          <input type="text" class="enter-email" id="email" name="email" placeholder="Для отправки ответа" ><br>
+          <label for="email"> Ваш e-mail </label>
+          <input type="text" class="enter-email" id="email" name="email" placeholder="Для отправки ответа" >
         </div>
         </div>
         <div class="bottom">
-          <label for="comment-field"> Текст письма </label> <br>
+          <label for="comment-field"> Текст письма </label>
           <textarea placeholder="В свободной форме" name="comment" id="comment-field"></textarea>
         </div>
         <input type="submit" value="ПОКАЗАТЬ">
